welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:14: error: illegal start of simple expression
  if(){
     ^golomb:17: error: ')' expected but '}' found.
} 
^