welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  if (num == 1 || num ==2){
    return num
  }
  if (num == 3){
    return 3
  }
  if (num == 4 || num == 5){
    return 3
  }
  if (num == 6 || num == 5){
    return 4
  }
  if(){
    
  }
}